<resources>
    <string name="app_name">FORM</string>
    <string name="name">priyanka s kalashetty</string>
    <string name="qualification">B.E CS</string>
    <string name="facebook0">Facebook: priya</string>
    <string name="twitter00">twitter: pinki</string>
    <string name="desgination1">desgination; student
    \n\n BLDEA ENGINEERING COLLEGE VIJAYAPUR
    \n\n Email id:kalashettypriyanka@gmail.com</string>
</resources>